# CatFileInfo

./: .gitattributes  Makefile  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
includes/: FileStatParser.h
src/: FileStatParser.cpp  Makefile.am  Makefile.in  cf  main.cpp
src/.deps/: cat_file-FileStatParser.Po  cat_file-main.Po  cf-FileStatParser.Po  cf-main.Po
